BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Disease_State_Proactive_Decks__c.object
<CustomObject>
    <description>VPRO - December - 2011 - BMS Oncology Requirements &amp; Design: Custom object to store the disease state proactive decks that an MSL can show during an interaction.</description>
    <fields>
        <fullName>Description_BMS__c</fullName>
        <description>VPRO - December - 2011 - BMS Oncology Requirements &amp; Design: Custom field to store the description for a given disease state proactive deck.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>VPRO - December - 2011 - BMS Oncology Requirements &amp; Design: Custom field to store the title of a a given disease state proactive deck.</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Disease State: Proactive Deck</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Disease State: Proactive Deck Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disease State: Proactive Decks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>